fix: image render wrong size

--- a/assets/styles/extra.scss
+++ b/assets/styles/extra.scss
@@ -15,6 +15,9 @@ html {
     overflow-x: hidden;
   }
 }
+body::-webkit-scrollbar {
+  height: 0;
+}
 ::-webkit-scrollbar {
   width: 10px;
   height: 10px;
